Fix gap on sidebar

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 body {
   display: grid;
   font-family: var(--font-family);
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: 300px 1fr;
   grid-template-rows: 125px 1fr;
   min-height: 100vh;
 }
@@ -36,7 +36,7 @@ header {
 .sidebar {
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 48px;
   padding: 16px;
   background-color: var(--light-blue);
   grid-column: 1 / 2;
@@ -44,11 +44,16 @@ header {
   color: var(--white);
 }
 
-.sidebar div,
 .sidebar li {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 32px;
+}
+
+.sidebar-header {
+  display: flex;
+  align-items: center;
+  gap: 12px;
 }
 
 ul {
@@ -59,6 +64,24 @@ ul {
 
 .sidebar .icon {
   filter: invert(100%);
+}
+
+.sidebar-header .icon {
+  width: 40px;
+  height: 40px;
+}
+
+.main-nav .icon,
+.secondary-nav .icon {
+  width: 20px;
+  height: 20px;
+}
+
+.main-nav ul,
+.secondary-nav ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 main {
